Fix Overflow X in DOM

--- a/src/App.css
+++ b/src/App.css
@@ -268,7 +268,6 @@ section {
   justify-items: center;
   flex-direction: column;
   align-items: center;
-  padding: 0rem 3rem;
 }
 .title--contact{
   padding: 2rem;
